--- a/assets/translations/en/translation.json
+++ b/assets/translations/en/translation.json
@@ -68,6 +68,60 @@
         "aria-label-invalid": "Invalid"
     },
     "dbp-show-active-tickets": {
+        "acquire-3g-ticket": {
+            "3g-proof": "Evidence",
+            "3g-proof-birthdate": "Birthdate",
+            "3g-proof-label-text": "Import evidence",
+            "3g-proof-proof-from": "From",
+            "3g-proof-status": "Status",
+            "3g-proof-valid-for": "Validity",
+            "3g-proof-valid-till-title": "Valid until",
+            "additional-information-1": "You can import your evidence of a low epidemiological risk by scanning the corresponding QR code. Alternatively, you can select a PDF document or an image with the QR code.",
+            "additional-information-2": "Self-tests from Styria and Carinthia can also be imported, but not validated directly in the application. You must ensure that your test result is still valid. The control takes place at the entrance.",
+            "additional-information-3": "For more information about Corona at TU Graz, please visit: <a target=\"_blank\" class=\"int-link-external\" href=\"https://www.tugraz.at/icoe/coronavirus/home/\" title=\"Coronavirus TU Graz\"><span>Coronavirus TU Graz </span></a>",
+            "additional-information-4": "What does TU Graz do with your data? You can find the data protection declaration for the app \"TU Graz greenlight\" here: <a target=\"_blank\" class=\"int-link-external\" href=\"https://greenlight.tugraz.at/local/@dbp-topics/greenlight/datenschutzerklaerung-tu-graz-greenlight.pdf\" title=\"privacy statement\"><span>privacy statement</span></a>",
+            "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
+            "confirm-not-checked-body": "Please confirm that the information you have provided is correct and that you are aware that misuse of the greenlight app may lead to legal consequences",
+            "confirm-not-checked-title": "Consent not given!",
+            "create-new-ticket": "Request new ticket",
+            "create-ticket": "Create ticket",
+            "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
+            "create-ticket-success-title": "Ticket successfully created!",
+            "description": "Creates a ticket for access to premises of TU Graz.",
+            "filepicker-button-title": "Choose PDF or image",
+            "filepicker-context": "Choose PDF or image for verification",
+            "found-valid-3g": "A valid evidence was imported.",
+            "found-valid-3g-preCheck": "Stored valid evidence could be found.",
+            "found-valid-selftest": "A self-test was found.",
+            "found-valid-selftest-preCheck": "A locally saved self-test was found.",
+            "invalid-body": "Please try again with another document.",
+            "invalid-document": "The evidence is currently not valid for {{place}}.",
+            "invalid-document-prefix": "Technical details: ",
+            "invalid-qr-body": "The QR code does not contain a valid evidence.",
+            "invalid-title": "Validation failed!",
+            "manage-tickets-link": "Show tickets",
+            "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
+            "manual-uploading-message": "Search for valid QR code...",
+            "manually-button-text": "Upload File",
+            "no-photo-body": "There is no valid photo of your student or staff ID in {{serviceName}}. Please contact the studies department.",
+            "no-qr-code": "No QR code found!",
+            "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
+            "other-error-body": "An unknown error has occurred.",
+            "other-error-title": "Error!",
+            "partial-validity-1": "Access to on-site exams",
+            "partial-validity-2": "Access to opened areas of TU Graz",
+            "photo-not-available-body": "No photo of your student or staff ID card could be loaded from {{serviceName}}. Please try again at a later time.",
+            "photo-not-available-title": "Ticket creation failed!",
+            "qr-button-text": "Scan QR code",
+            "remove-proof": "Remove evidence",
+            "request-ticket-button-text": "Request ticket",
+            "self-test": "Selftest",
+            "self-test-information": "Please check whether the evidence is still valid.",
+            "self-test-link": "Link",
+            "trust-and-save-1": "I agree to import my evidence and store this data on my device.",
+            "trust-and-save-2": "Your data is stored and processed exclusively on this device. There is no automatic transfer of an imported evidence between devices. The evidence imported on other devices is only available on these devices.",
+            "valid-till": "valid until "
+        },
         "show-active-tickets": {
             "3-g-evidence": "Evidence",
             "3-g-evidence-green-pass-valid": "Green Pass imported and valid on this device",
