--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -40,7 +40,7 @@
         "no-qr-code": "Kein QR-Code gefunden!",
         "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zugeordnet werden.",
         "partial-validity-1": "Zutritt zu Präsenzprüfungen",
-        "partial-validity-2": "Zutritt zu geöffneten Bereichen der Univerität",
+        "partial-validity-2": "Zutritt zu geöffneten Bereichen der Universität",
         "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
         "other-error-title": "Fehler!",
         "photo-not-available-body": "Es konnte kein Foto von Ihrem Studierenden- oder Bedienstetenausweis aus {{serviceName}} geladen werden. Bitte versuchen Sie es zu einem späteren Zeitpunkt noch einmal.",
@@ -94,7 +94,7 @@
         "delete-ticket-notfound-title": "Ticket nicht gefunden!",
         "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
         "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
-        "greenlight-reference": "Es wurde kein gültiger gespeicherter Nachweis gefunden. zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket unter <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class='int-link-internal-light'><span>Eintrittsticket erstellen</span></a> anfordern.",
+        "greenlight-reference": "Es wurde kein gültiger gespeicherter Nachweis gefunden. zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket unter <a href='acquire-3g-ticket' title='Eintrittsticket erstellen' target='_self' class=\"int-link-internal-light\"><span>Eintrittsticket erstellen</span></a> anfordern.",
         "invalid-evidence": "Falls der Nachweis nicht mehr gültig ist, können Sie ein neues Ticket erstellen und einen neuen Nachweis hochladen.",
         "logged-out-body": "Die Sitzung ist abgelaufen. Bitte melden Sie sich erneut an.",
         "logged-out-title": "Sitzung abgelaufen!",
