--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,5 +1,5 @@
 {
-    "acquire-3g-ticket": {
+    "dbp-acquire-3g-ticket": {
         "3g-proof": "Evidence",
         "3g-proof-birthdate": "Birthdate",
         "3g-proof-label-text": "Import evidence",
@@ -55,29 +55,7 @@
         "trust-and-save-2": "Your data is stored and processed exclusively on this device. There is no automatic transfer of an imported evidence between devices. The evidence imported on other devices is only available on these devices.",
         "valid-till": "valid until "
     },
-    "date-time": "{{clock}} on {{date}}",
-    "delete-btn-text": "Delete",
-    "entry-ticket": "Entry Ticket",
-    "error-login-message": "You need to be logged in to use this function!",
-    "error-permission-message": "This function is currently only available for students!",
-    "file-sink": {
-        "modal-close": "Close"
-    },
-    "hcert": {
-        "cert-not-valid-error": "Does not comply with the following rules: {{error}}",
-        "cert-validation-failed-error": "Validation failed: {{error}}"
-    },
-    "image-alt-text": "Ticket image",
-    "loading-message": "Loading...",
-    "loading-message-ticket": "Loading the ticket ...",
-    "no-tickets-message": "You do not have any tickets!",
-    "reload": "Refresh",
-    "reload-error-body": "The update failed. Check your internet connection, log in again or try again later.",
-    "reload-error-title": "Update failed",
-    "reload-failed": "Automatic update failed",
-    "self-test-not-supported-body": "Antigen tests with self-acceptance (\"self-tests\") are no longer permitted as proof of entry.",
-    "self-test-not-supported-title": "Self-tests are not supported",
-    "show-active-tickets": {
+    "dbp-show-active-tickets": {
         "3-g-evidence": "Evidence",
         "3-g-evidence-green-pass-valid": "Green Pass imported and valid on this device",
         "3-g-evidence-greenpass": "Evidence: Green Pass found",
@@ -111,8 +89,7 @@
         "validation-failed": "Validation currently not possible",
         "validation-failed-text": "The validation of the evidence is currently not possible for technical reasons. Please try again later."
     },
-    "show-btn-text": "Show",
-    "show-reference-ticket": {
+    "dbp-show-reference-ticket": {
         "description": "At this point the validity of an entrance ticket is displayed. Whether a ticket is active or inactive depends on the evidence imported on the controlled person's device. The reference ticket does not entitle you to enter rooms at the university.",
         "information-container-body": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
         "information-container-headline": "Information about evidence",
@@ -125,13 +102,38 @@
         "information-container-3": "If a valid health certificate is available on this device then its QR code is displayed and the ticket is shown in color. This QR code can be checked with GreenCheck. If a self-test that was issued by Land Steiermark or Land Kärnten is available on this device then its QR code is displayed and the ticket is shown in black and white. This QR code cannot be validated by this app, therefore its validation requires a QR code scanner. If a valid university-internal test is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document.",
         "information-container-4": ""
     },
-    "aria-label-valid": "Valid",
-    "aria-label-invalid": "Invalid",
-    "valid-till": "Probably valid until ",
-    "validation-not-possible": "The validation of the evidence is currently not possible for technical reasons. Please try again later.",
-    "validation-not-possible-body": "The evidence cannot currently be validated. Please try again later.",
-    "validation-not-possible-title": "Validation currently not possible",
-    "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
-    "validity-tooltip-ticket-text": "The ticket is only valid in electronic form.",
-    "university-name": "Place"
+    "dbp-greenlight-common": {
+      "date-time": "{{clock}} on {{date}}",
+      "delete-btn-text": "Delete",
+      "entry-ticket": "Entry Ticket",
+      "error-login-message": "You need to be logged in to use this function!",
+      "error-permission-message": "This function is currently only available for students!",
+      "file-sink": {
+          "modal-close": "Close"
+      },
+      "hcert": {
+          "cert-not-valid-error": "Does not comply with the following rules: {{error}}",
+          "cert-validation-failed-error": "Validation failed: {{error}}"
+      },
+      "image-alt-text": "Ticket image",
+      "loading-message": "Loading...",
+      "loading-message-ticket": "Loading the ticket ...",
+      "no-tickets-message": "You do not have any tickets!",
+      "reload": "Refresh",
+      "reload-error-body": "The update failed. Check your internet connection, log in again or try again later.",
+      "reload-error-title": "Update failed",
+      "reload-failed": "Automatic update failed",
+      "self-test-not-supported-body": "Antigen tests with self-acceptance (\"self-tests\") are no longer permitted as proof of entry.",
+      "self-test-not-supported-title": "Self-tests are not supported",
+      "show-btn-text": "Show",
+      "aria-label-valid": "Valid",
+      "aria-label-invalid": "Invalid",
+      "valid-till": "Probably valid until ",
+      "validation-not-possible": "The validation of the evidence is currently not possible for technical reasons. Please try again later.",
+      "validation-not-possible-body": "The evidence cannot currently be validated. Please try again later.",
+      "validation-not-possible-title": "Validation currently not possible",
+      "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
+      "validity-tooltip-ticket-text": "The ticket is only valid in electronic form.",
+      "university-name": "Place"
+    }
 }
